--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -1,2 +1,11 @@
 @import "null";
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
+#root,
+.App {
+  height: 100%;
+}
+
+body {
+  height: 100vh;
+}
