--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -10,3 +10,17 @@ body {
   height: 100vh;
   overflow: hidden;
 }
+* {
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #1f274e;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #353f75;
+  }
+}
